<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/iconCardView"
        android:layout_width="100dp"
        android:layout_height="99dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/goods_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/corners_round"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/g_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/goods_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/iconCardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:maxLines="2"
        android:ellipsize="end"
        android:id="@+id/exp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textColor="@color/light_gray"
        app:layout_constraintLeft_toRightOf="@id/iconCardView"
        app:layout_constraintTop_toBottomOf="@id/g_name"/>

    <TextView
        android:id="@+id/g_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/exp"
       app:layout_constraintTop_toBottomOf="@+id/exp" />


</androidx.constraintlayout.widget.ConstraintLayout>