<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/snackbar_action"
    tools:context=".GoodsDetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buy_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/sample1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/seller_info"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_image">

                <ImageView
                    android:id="@+id/seller_profile"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="17dp"
                    android:src="@drawable/pngwing"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/seller_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/seller_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/seller_profile"
                    app:layout_constraintTop_toTopOf="@id/seller_profile" />

                <TextView
                    android:id="@+id/seller_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/address"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/seller_profile"
                    app:layout_constraintTop_toBottomOf="@+id/seller_Name" />

                <ImageView
                    android:id="@+id/emote_wink"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/winking_face"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/seller_Name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:text="39.3°C"
                    android:textColor="@color/temperature"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/emote_wink"
                    app:layout_constraintTop_toTopOf="@+id/emote_wink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/manner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emote_wink" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/goods_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seller_info"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/item_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience"
                app:layout_constraintStart_toStartOf="@+id/goods_title"
                app:layout_constraintTop_toBottomOf="@+id/goods_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>




        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>





    <ImageView
        android:id="@+id/back_b"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buy_info"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">
        
        <LinearLayout
            android:id="@+id/detail_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:id="@+id/ivDetailLike"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/heart"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:id="@+id/view"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#E1DCDC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_like"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <TextView
            android:id="@+id/detail_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="10,000원"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toEndOf="@id/view"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_round"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="17dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>